<?xml version="1.0"?>
<package format="2">
  <name>libbarrett_ros</name>
  <version>0.0.0</version>
  <description>
    libbarrett_ros provides a ros_control hardware interface for Barrett
    Technology's products.
  </description>
  <maintainer email="mkoval@cs.cmu.edu">Michael Koval</maintainer>
  <author email="mkoval@cs.cmu.edu">Michael Koval</author>
  <author email="amj1@andrew.cmu.edu">Aaron Johnson</author>
  <author email="hm@barrett.com">Hariharasudan Malaichamee</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <depend>boost</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>libbarrett</depend>
  <depend>roscpp</depend>
  <depend>transmission_interface</depend>
</package>
